--- a/calendar.html
+++ b/calendar.html
@@ -24,7 +24,7 @@
 			day = 1
 			document.write("<center><TABLE BORDER=3 CELLSPACING=3 CELLPADDING=%3><TR>")
 			document.write("<TD COLSPAN=7 ALIGN=center><B><p>" + m_name + "</p><p>" + this_year + "</p></B><TR>")
-			day_title("Hbshba (هبشبا)")
+			day_title("Hbshba ($هبشبا)")
 			day_title("Etryn Hbshba (اترين هبشبا)")
 			day_title("Tlatha Hbshba (تلاثا هبشبا)")
 			day_title("Arba Hbshba (اربا هبشبا)")
