--- a/calendar.html
+++ b/calendar.html
@@ -84,8 +84,8 @@
 		month_length[11] = 30
 		month_length[12] = 30
 		var dateCalanderCreated = new Date("7-18-2016")//new Date("1-8-2018") ;
-		var mandaeanCalanderCreated = { month: 1, day: 1, year: 2052 };   //{month:4 , day:25 , year:2052}; // 4-25 (8-1-2018)
-		today = new Date("1-14-2017"); //  2 and 3 ahve same value
+		var mandaeanCalanderCreated = { month: 1, day: 1, year: 2050 };   //{month:4 , day:25 , year:2052}; // 4-25 (8-1-2018)
+		today = new Date(); // "1-14-2017"
 		var result = showDays(today, dateCalanderCreated); // find different in days
 
 		years = parseInt(result / 365); // number of years
