--- a/calendar.html
+++ b/calendar.html
@@ -1,3 +1,10 @@
+<!--
+	Copy right to 
+	Aram alzuhairi
+	aram_alzuhairi@yahoo.com.au
+	reload work= https://rawgit.com/aramAlzuhairi/MandaeanCalander/master/calendar.html
+-->
+
 <!DOCTYPE html>
 <html>
 <!-- 22/6  -> 5/1 -->
@@ -9,123 +16,123 @@
 <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
 <!-- script src="calculateTimeAndDate.js"></script -->
 <script src="https://rawgit.com/aramAlzuhairi/MandaeanCalander/1827f2e7e113f9a3301750bc260771f6c9f6ee10/calculateTimeAndDate.js"></script>
-	<br><br>
+<br><br>
+
 <body>
 	<div class="col-12 col-sm-12 col-lg-12 container">
-	<script language="javascript">
-		function makeArray(n) {
-			this.length = n;
-			for (var i = 1; i <= n; i++)
-				this[i] = 0
-			return this
-		}
-
-		function fill_table(m_name, m_length, mm) {
-			day = 1
-			document.write("<center><TABLE BORDER=3 CELLSPACING=3 CELLPADDING=%3><TR>")
-			document.write("<TD COLSPAN=7 ALIGN=center><B><p>" + m_name + "</p><p>" + this_year + "</p></B><TR>")
-			day_title("Hbshba (هبشبا)")
-			day_title("Etryn Hbshba (اترين هبشبا)")
-			day_title("Tlatha Hbshba (تلاثا هبشبا)")
-			day_title("Arba Hbshba (اربا هبشبا)")
-			day_title("Hmsha Hbshba (همشا هبشبا)")
-			day_title("Owrfta (أورفتا)")
-			day_title("Shfta (شفتا)")
-			document.write("</TR><TR>")
-
-			for (var i = 8; i < 8; i++) {
-				document.write("<TD>");
-				hilite_today(day, mm)
-				document.write(day + "</TD><FONT COLOR='#000000'>")
-				day++;
+		<script language="javascript">
+			function makeArray(n) {
+				this.length = n;
+				for (var i = 1; i <= n; i++)
+					this[i] = 0
+				return this
 			}
-			document.write("<TR>")
-			while (day <= m_length) {
-				for (var i = 1; i <= 7 && day <= m_length; i++) {
-					//document.write("<TD id='nowday' ALIGN=center>")
+
+			function fill_table(m_name, m_length, mm) {
+				day = 1
+				document.write("<center><TABLE BORDER=3 CELLSPACING=3 CELLPADDING=%3><TR>")
+				document.write("<TD COLSPAN=7 ALIGN=center><B><p>" + m_name + "</p><p>" + this_year + "</p></B><TR>")
+				day_title("Hbshba (هبشبا)")
+				day_title("Etryn Hbshba (اترين هبشبا)")
+				day_title("Tlatha Hbshba (تلاثا هبشبا)")
+				day_title("Arba Hbshba (اربا هبشبا)")
+				day_title("Hmsha Hbshba (همشا هبشبا)")
+				day_title("Owrfta (أورفتا)")
+				day_title("Shfta (شفتا)")
+				document.write("</TR><TR>")
+
+				for (var i = 8; i < 8; i++) {
+					document.write("<TD>");
 					hilite_today(day, mm)
 					document.write(day + "</TD><FONT COLOR='#000000'>")
-					day++
+					day++;
 				}
-				document.write("</TR><TR>")
+				document.write("<TR>")
+				while (day <= m_length) {
+					for (var i = 1; i <= 7 && day <= m_length; i++) {
+						//document.write("<TD id='nowday' ALIGN=center>")
+						hilite_today(day, mm)
+						document.write(day + "</TD><FONT COLOR='#000000'>")
+						day++
+					}
+					document.write("</TR><TR>")
+				}
+				document.write("</TR></TABLE></center><BR>")
+				start_day = i
 			}
-			document.write("</TR></TABLE></center><BR>")
-			start_day = i
-		}
 // End
+		</script>
 
-	</script>
+		<SCRIPT LANGUAGE="JavaScript">
+			month = new makeArray(12)
+			month[1] = "Ambra - امبرا"
+			month[2] = "Twra - تورا"
+			month[3] = "Slmy - صلمي"
+			month[4] = "SrTana - سرطانا"
+			month[5] = "Arya - اربا"
+			month[6] = "Shomblta - شمبلتا"
+			month[7] = "Qyna - قينا"
+			month[8] = "ArQwa - ارقوا"
+			month[9] = "HTya - هطيا"
+			month[10] = "Kdya - كديا"
+			month[11] = "Dwla - دولا"
+			month[12] = "Nwna - نونا"
+			month_length = new makeArray(12)
+			month_length[1] = 30
+			month_length[2] = 30
+			month_length[3] = 30
+			month_length[4] = 30
+			month_length[5] = 30
+			month_length[6] = 35
+			month_length[7] = 30
+			month_length[8] = 30
+			month_length[9] = 30
+			month_length[10] = 30
+			month_length[11] = 30
+			month_length[12] = 30
+			var dateCalanderCreated = new Date("7-18-2016")//new Date("1-8-2018") ;
+			var mandaeanCalanderCreated = { month: 1, day: 1, year: 2050 };   //{month:4 , day:25 , year:2052}; // 4-25 (8-1-2018)
+			today = new Date(); // "1-14-2017"
+			var result = showDays(today, dateCalanderCreated); // find different in days
 
-	<SCRIPT LANGUAGE="JavaScript">
-		month = new makeArray(12)
-		month[1] = "Ambra - امبرا"
-		month[2] = "Twra - تورا"
-		month[3] = "Slmy - صلمي"
-		month[4] = "SrTana - سرطانا"
-		month[5] = "Arya - اربا"
-		month[6] = "Shomblta - شمبلتا"
-		month[7] = "Qyna - قينا"
-		month[8] = "ArQwa - ارقوا"
-		month[9] = "HTya - هطيا"
-		month[10] = "Kdya - كديا"
-		month[11] = "Dwla - دولا"
-		month[12] = "Nwna - نونا"
-		month_length = new makeArray(12)
-		month_length[1] = 30
-		month_length[2] = 30
-		month_length[3] = 30
-		month_length[4] = 30
-		month_length[5] = 30
-		month_length[6] = 35
-		month_length[7] = 30
-		month_length[8] = 30
-		month_length[9] = 30
-		month_length[10] = 30
-		month_length[11] = 30
-		month_length[12] = 30
-		var dateCalanderCreated = new Date("7-18-2016")//new Date("1-8-2018") ;
-		var mandaeanCalanderCreated = { month: 1, day: 1, year: 2050 };   //{month:4 , day:25 , year:2052}; // 4-25 (8-1-2018)
-		today = new Date(); // "1-14-2017"
-		var result = showDays(today, dateCalanderCreated); // find different in days
-
-		years = parseInt(result / 365); // number of years
-		daydeff = Math.abs(result) % 365;
+			years = parseInt(result / 365); // number of years
+			daydeff = Math.abs(result) % 365;
 
 
-		var days = daydeff + 1; // 1 because we started from 1/1
+			var days = daydeff + 1; // 1 because we started from 1/1
 
-		var m = 1;
+			var m = 1;
 
-		alert(daydeff + ">><<<" + m);
+			alert(daydeff + ">><<<" + m);
 
-		while (true) {
-			if (days > month_length[m]) {
-				days = days - month_length[m];
-				m++;
-				//	alert(days +"----"+m+(days>month_length[m]));
+			while (true) {
+				if (days > month_length[m]) {
+					days = days - month_length[m];
+					m++;
+					//	alert(days +"----"+m+(days>month_length[m]));
+				}
+				else
+				{ break; }
 			}
-			else
-			{ break; }
-		}
 
-		// problem with 30 day and 35 the last days
-		this_day = days;//today.getDate();
-		this_month = m;// today.getMonth()+1;
-		this_year = mandaeanCalanderCreated.year + years;// today.getFullYear();
+			// problem with 30 day and 35 the last days
+			this_day = days;//today.getDate();
+			this_month = m;// today.getMonth()+1;
+			this_year = mandaeanCalanderCreated.year + years;// today.getFullYear();
 
-		alert(this_day + " / " + this_month + " / " + this_year);
-		//MM-DD-yyy
-		//begin_date = new Date("1-1-"+this_year)
-		//start_day = begin_date.getDay()+1
-		//if (start_day == 1){
-		//start_day = 8
-		//}
+			alert(this_day + " / " + this_month + " / " + this_year);
+			//MM-DD-yyy
+			//begin_date = new Date("1-1-"+this_year)
+			//start_day = begin_date.getDay()+1
+			//if (start_day == 1){
+			//start_day = 8
+			//}
 
-		for (var m = 1; m <= 12; m++) {
+			for (var m = 1; m <= 12; m++) {
 
-			fill_table(month[m], month_length[m], m);
+				fill_table(month[m], month_length[m], m);
 
-		}
+			}
 /* // used to but the tables side by side
 document.write("<table width='100%' height='100%'  border=0>");
 document.write("<tr><td>");
@@ -136,9 +143,9 @@ document.write("</table>");
 */
 // End
 
-</SCRIPT>
+		</SCRIPT>
 
-</div>
+	</div>
 
 </body>
 
