--- a/calendar.html
+++ b/calendar.html
@@ -7,63 +7,55 @@
 
 <!DOCTYPE html>
 <html>
+<style>
+	.bgcolor1 .bgcolor3 .bgcolor5 .bgcolor7 .bgcolor9 .bgcolor11 {
+		background-color: #FCF6CF;
+	}
+
+	.bgcolor2 .bgcolor4 .bgcolor6 .bgcolor8 .bgcolor10 .bgcolor12 {
+		background-color: #FEFEF2;
+	}
+</style>
 <!-- 22/6  -> 5/1 -->
+
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.11.1/moment.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+
+<link href="https://code.jquery.com/ui/1.9.2/themes/base/jquery-ui.css" rel="stylesheet" />
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script src="https://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
+
+
 <!-- script src="calculateTimeAndDate.js"></script -->
 <script src="https://rawgit.com/aramAlzuhairi/MandaeanCalander/1827f2e7e113f9a3301750bc260771f6c9f6ee10/calculateTimeAndDate.js"></script>
+
+<script src="events.js"></script>
+
 <br><br>
 
-<body>
-	<div class="col-12 col-sm-12 col-lg-12 container">
-		<script language="javascript">
-			function makeArray(n) {
-				this.length = n;
-				for (var i = 1; i <= n; i++)
-					this[i] = 0
-				return this
-			}
+<body onload="onCalanderload();">
 
-			function fill_table(m_name, m_length, mm) {
-				day = 1
-				document.write("<center><TABLE BORDER=3 CELLSPACING=3 CELLPADDING=%3><TR>")
-				document.write("<TD COLSPAN=7 ALIGN=center><B><p>" + m_name + "</p><p>" + this_year + "</p></B><TR>")
-				day_title("Hbshba (هبشبا)")
-				day_title("Etryn Hbshba (اترين هبشبا)")
-				day_title("Tlatha Hbshba (تلاثا هبشبا)")
-				day_title("Arba Hbshba (اربا هبشبا)")
-				day_title("Hmsha Hbshba (همشا هبشبا)")
-				day_title("Owrfta (أورفتا)")
-				day_title("Shfta (شفتا)")
-				document.write("</TR><TR>")
-
-				for (var i = 8; i < 8; i++) {
-					document.write("<TD>");
-					hilite_today(day, mm)
-					document.write(day + "</TD><FONT COLOR='#000000'>")
-					day++;
-				}
-				document.write("<TR>")
-				while (day <= m_length) {
-					for (var i = 1; i <= 7 && day <= m_length; i++) {
-						//document.write("<TD id='nowday' ALIGN=center>")
-						hilite_today(day, mm)
-						document.write(day + "</TD><FONT COLOR='#000000'>")
-						day++
-					}
-					document.write("</TR><TR>")
-				}
-				document.write("</TR></TABLE></center><BR>")
-				start_day = i
-			}
-// End
-		</script>
+	<!-- Date Piker -->
+	<div class="container">
+		<div class="row">
+			<div class='col-sm-2'><strong>Pick a date:</strong></div>
+			<div class='col-sm-3'>
+				<input type='date' class="form-control" id='datepickerC' />
+			</div>
+			<div class='col-sm-2'>
+				<button id="lookForDate">look For Date</button>
+			</div>
+		</div>
+	</div>
+	<br><br>
+	<div class="col-12 col-sm-12 col-lg-12 container card">
 
 		<SCRIPT LANGUAGE="JavaScript">
+			onCalanderload();
+
 			month = new makeArray(12)
 			month[1] = "Ambra - امبرا"
 			month[2] = "Twra - تورا"
@@ -91,8 +83,12 @@
 			month_length[11] = 30
 			month_length[12] = 30
 			var dateCalanderCreated = new Date("7-18-2016")//new Date("1-8-2018") ;
-			var mandaeanCalanderCreated = { month: 1, day: 1, year: 2050 };   //{month:4 , day:25 , year:2052}; // 4-25 (8-1-2018)
-			today = new Date(); // "1-14-2017"
+			var mandaeanCalanderCreated = { month: 11, day: 1, year: 2050 };   //{month:4 , day:25 , year:2052}; // 4-25 (8-1-2018)
+			
+			
+			var datePicker = $("#datepickerC").val().split('/') ;
+alert($("#datepickerC").val()); //datePicker[1]+"-"+datePicker[0]+"-"+datePicker[2] + 
+			today = new Date(datePicker[1]+"-"+datePicker[0]+"-"+datePicker[2]); // "1-14-2017"
 			var result = showDays(today, dateCalanderCreated); // find different in days
 
 			years = parseInt(result / 365); // number of years
@@ -101,26 +97,28 @@
 
 			var days = daydeff + 1; // 1 because we started from 1/1
 
-			var m = 1;
+			var m = 0;
 
-			alert(daydeff + ">><<<" + m);
+			//alert($.datepicker.formatDate('mm-dd-yy', $("#datepickerC").val() ));
+			//alert(daydeff + ">><<<" + m);
 
+			var monthInOrder = [11, 12, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10];
 			while (true) {
-				if (days > month_length[m]) {
-					days = days - month_length[m];
+				if (days > month_length[monthInOrder[m]]) {
+					days = days - month_length[monthInOrder[m]];
 					m++;
 					//	alert(days +"----"+m+(days>month_length[m]));
 				}
 				else
 				{ break; }
 			}
-
+		//	alert(daydeff + ">><<<" + m);
 			// problem with 30 day and 35 the last days
 			this_day = days;//today.getDate();
-			this_month = m;// today.getMonth()+1;
+			this_month = monthInOrder[m];// today.getMonth()+1;
 			this_year = mandaeanCalanderCreated.year + years;// today.getFullYear();
 
-			alert(this_day + " / " + this_month + " / " + this_year);
+		//	alert(this_day + " / " + this_month + " / " + this_year);
 			//MM-DD-yyy
 			//begin_date = new Date("1-1-"+this_year)
 			//start_day = begin_date.getDay()+1
@@ -142,7 +140,6 @@ document.write("</td></tr>");
 document.write("</table>");
 */
 // End
-
 		</SCRIPT>
 
 	</div>
