--- a/calendar.html
+++ b/calendar.html
@@ -32,11 +32,15 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <script src="https://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
 
+<!--
 <script src="calculateTimeAndDate.js"></script>
-<!--  
-<script src="https://rawgit.com/aramAlzuhairi/MandaeanCalander/master/calculateTimeAndDate.js"></script>
--->
 <script src="events.js"></script>
+-->
+<!--  -->
+<script src="https://rawgit.com/aramAlzuhairi/MandaeanCalander/master/calculateTimeAndDate.js"></script>
+<script src="events.js"></script>
+
+
 
 <br><br>
 
