--- a/calendar.html
+++ b/calendar.html
@@ -38,7 +38,7 @@
 -->
 <!--  -->
 <script src="https://rawgit.com/aramAlzuhairi/MandaeanCalander/master/calculateTimeAndDate.js"></script>
-<script src="events.js"></script>
+<script src="https://rawgit.com/aramAlzuhairi/MandaeanCalander/master/events.js"></script>
 
 
 
