--- a/calendar.html
+++ b/calendar.html
@@ -13,11 +13,11 @@
 <html>
 <style>
 	.bgcolor1 ,.bgcolor3 , .bgcolor5 , .bgcolor7 , .bgcolor9 , .bgcolor11 {
-		background-color: #EFEFEF;
+		background-color: #FAFAFA;
 	}
 
 	.bgcolor2 , .bgcolor4 , .bgcolor6 , .bgcolor8 , .bgcolor10 , .bgcolor12 {
-		background-color: #E1E1E1;
+		background-color: #E9E9E9;
 	}
 </style>
 <!-- 22/6  -> 5/1 -->
