--- a/calendar.html
+++ b/calendar.html
@@ -53,7 +53,7 @@
 	<div class="container">
 		<div class="row">
 			<div class='col-sm-4'>
-				<strong>Pick a date: </strong>
+				<strong>Pick a dateT: </strong>
 				<input type='date' class="form-control" id='datepickerC' />
 			</div>
 			<div class='col-sm-4'><br>
